# pomodoro

./: .gitignore  .prod.env  Makefile  alembic.ini  dependency.py  docker-compose.yml  exception.py  fixtures.py  gunicorn.conf.py  main.py  pyproject.toml  settings.py  temp
alembic/: env.py
alembic/versions/: 182634a754bf_user_id_in_tasks.py  26d33e200e9d_user_init.py  37eec80fed69_yandex_access_token.py  7dc740e94f39_user_profile_nullable_fields_update.py  80dc6558182c_extend_user_profile.py  a22e96d2310e_init.py  b6da82f237ab_access_token_delete.py  dda6a4f1de54_user_id.py  e0da4c6fb302_access_token_nullable.py
app/: dependency.py  main.py
app/client/: __init__.py  google.py  yandex.py
app/handlers/: __init__.py  auth.py  tasks.py  user.py
app/infrastructure/database/: __init__.py  accessor.py
app/models/: __init__.py  tasks.py  user.py
app/repository/: __init__.py  cache_task.py  task.py  user.py
app/schema/: __init__.py  user.py
app/service/: __init__.py  auth.py  task.py  user.py
cache/: accessor.py
client/: google.py  yandex.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  analytics.py  auth.py  ping.py  tasks.py
infra/: Dockerfile
models/: __init__.py  tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schema/: __init__.py  task.py  user.py
service/: __init__.py  auth.py  task.py  user.py
