[project]
name = "pomodorro-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "bayanistnahtc",email = "bayanistnahtc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)"
]

[tool.poetry]
packages = [{include = "pomodorro_poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
